[IMP]Correos express api based on asm api.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,4 @@ include COPYRIGHT
 include README
 include CHANGELOG
 include INSTALL
-include asm/*
-include asm/template/*
+include correosexpress/*
